Fix unpackager tracker direction saving
Fix distributor network representation
Removed unused fields in crafting pattern details